force-app/main/default/objects/Form_LCF_Grant_Payment_History_1__c/Form_LCF_Grant_Payment_History_1__c.object-meta.xml
<CustomObject>
    <label>Form LCF Grant Payment History 1.0</label>
    <nameField>
        <displayFormat>PAH-{00000}</displayFormat>
        <label>Payment History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Payment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>