force-app/main/default/objects/Form_LCF_Grant_Payment_History_1__c/fields/lcf_grant_annual_block__c.field-meta.xml
<CustomField>
    <fullName>lcf_grant_annual_block__c</fullName>
    <description>Parent annual block</description>
    <inlineHelpText>Parent annual block</inlineHelpText>
    <label>LCF Grant Annual Block</label>
    <referenceTo>Form_LCF_Grant_Annual_Block_1__c</referenceTo>
    <relationshipLabel>LCF Grant Payment History</relationshipLabel>
    <relationshipName>payment_history</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>