force-app/main/default/objects/Form_LCF_Grant_Payment_History_1__c/fields/ph_actual_lcf_funding__c.field-meta.xml
<CustomField>
    <fullName>ph_actual_lcf_funding__c</fullName>
    <description>(to the nearest £1000)</description>
    <inlineHelpText>Actual LCF funding</inlineHelpText>
    <label>PH - Actual LCF Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>