force-app/main/default/objects/Form_LCF_Grant_Payment_History_1__c/fields/ph_financial_year__c.field-meta.xml
<CustomField>
    <fullName>ph_financial_year__c</fullName>
    <inlineHelpText>Financial year (April - March)</inlineHelpText>
    <label>PH - Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Years</valueSetName>
    </valueSet>
</CustomField>